manifest/objects/Apttus__AgreementExplorer__c.object
<CustomObject>
    <description>A reusable, unique combination of Field Sets and Filter Sets.</description>
    <fields>
        <fullName>Apttus__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account Id associated with this query.</description>
        <inlineHelpText>The Account Id associated with this query.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Explorers</relationshipLabel>
        <relationshipName>AgreementExplorers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agreement Id associated with this query.</description>
        <inlineHelpText>The agreement Id associated with this query.</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Explorers</relationshipLabel>
        <relationshipName>AgreementExplorers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Category allows users to search, find, and select explorer records</description>
        <inlineHelpText>Category allows users to search, find, and select explorer records</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Context__c</fullName>
        <description>The context of the given query.</description>
        <inlineHelpText>The context of the given query.</inlineHelpText>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                    <default>true</default>
                    <label>Agreement</label>
                </value>
                <value>
                    <fullName>Agreement By Account(s)</fullName>
                </value>
                <value>
                    <fullName>Agreement Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Criteria__c</fullName>
        <description>The query criteria specification</description>
        <inlineHelpText>The query criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the query in question is the default query for the given context.</description>
        <inlineHelpText>This field determines if the query in question is the default query for the given context.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The description of the query.</description>
        <inlineHelpText>The description of the query.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldSet__c</fullName>
        <description>A comma separated list of API names of fields to display in the result set for the query</description>
        <inlineHelpText>A comma separated list of API names of fields to display in the result set for the query</inlineHelpText>
        <label>Result Field Set</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Keywords allow users to search, find, and select explorer records</description>
        <inlineHelpText>Keywords allow users to search, find, and select explorer records</inlineHelpText>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Label__c</fullName>
        <description>Label allows users to search, find, and select explorer records</description>
        <inlineHelpText>Label allows users to search, find, and select explorer records</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the query is public or private.</description>
        <inlineHelpText>Determines if the query is public or private.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>A forumla field that shows up as a link on the Agreement Explorer tab, which will direct user to the result page once clicked.</description>
        <formula>CASE(Apttus__Context__c,
  &quot;Agreement&quot;,HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context=Agreement&quot;, Name ),
  &quot;Agreement By Account(s)&quot;, HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context= Agreement By Account(s)&quot;, Name ),
  &quot;Agreement Search&quot;,  HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context=Agreement Search&quot;, Name), &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A forumla field that shows up as a link on the Agreement Explorer tab, which will direct user to the result page once clicked.</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Agreement Explorer</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>Apttus__Title__c</columns>
        <columns>Apttus__Context__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Label__c</columns>
        <columns>Apttus__Keywords__c</columns>
        <columns>Apttus__Description__c</columns>
        <columns>Apttus__Public__c</columns>
        <columns>Apttus__Default__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_AgreementExplorer</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Explorer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>